# postcards_recognition

./: BinaryComparisonMatrix.py  GoogleLandmarksDS.py  ImageComparator.py  LICENSE  OpenAIImageComparator.py  OpenCVHistogramBasedImageComparator.py  OpenCVTemplateBasedImageComparator.py  README.md  SIFTImageComparator.py  main.py  pyproject.toml
postcards/: BinaryComparisonMatrix.py  GoogleLandmarksDS.py
postcards/img_comparators/: OpenAIImageComparator.py  OpenCVHistogramBasedImageComparator.py  OpenCVTemplateBasedImageComparator.py  SIFTImageComparator.py  __init__.py  abstract_image_comparator.py
